--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.recurrenceproperties.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.recurrenceproperties.yml
@@ -124,7 +124,7 @@ items:
         type:
           - 'outlook!Office.RecurrenceProperties#month~0:complex'
   - uid: 'outlook!Office.RecurrenceProperties#weekNumber:member'
-    summary: 表示所选月中的一周数，例如，月的第一周的 ' first '。
+    summary: 代表所选月份中的星期数，例如，月的第一周的 ' first '。
     name: weekNumber
     fullName: weekNumber
     langs:
